--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="app">
         sdfds
         fdsaf
+        sdf
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
