--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
-    <div id="app">
-        sdfds
-        fdsaf
-        sdf
-    </div>
+  <body class="body">
+    <div class="app" id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
