--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="/send-icon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script type="module" src="/src/main.js"></script>
-		<title>Vite App</title>
+		<title>Vite AppOld</title>
 	</head>
 	<body class="body">
 		<div class="app" id="app"></div>
